<resources>
    <string name="app_name">Cardiology</string>

    <string name="registration">Ro’yxatdan o’tish</string>
    <string name="sign_in">Kirish</string>
    <string name="login">Login</string>
    <string name="password">Parol</string>
    <string name="verification_code">Tasdiqlash kodi</string>
    <string name="forgot_password">Parolni unutdingizmi?</string>
    <string name="enter_your_data">Ma’lumotlaringizni kiriting</string>
    <string name="first_name">Ism</string>
    <string name="last_name">Familiya</string>
    <string name="phone_number">Telefon raqam</string>
    <string name="speciality">Mutaxassislik</string>
    <string name="sections_list">Bo’limlar ro’yxati</string>
    <string name="search">Qidirish</string>
    <string name="room">Xona</string>
    <string name="create_account">Hisob yaratish</string>
    <string name="send_verification_code">Tasdiqlash kodini jo’natish</string>
    <string name="code_sent_1">Bir martalik kod</string>
    <string name="code_sent_2">raqamiga jo’natildi</string>
    <string name="submit">Tasdiqlash</string>
    <string name="change_phone_number">Telefon raqamini o’zgartirish</string>
    <string name="verification_code_must_be_6_digits">Tasdiqlash kodi 6 xonali son bo’lishi kerak</string>
    <string name="save_data">Ma’lumotlarni saqlash</string>
    <string name="number_already_registered">Bu raqam ro’yxatdan o’tib bo’lgan</string>
    <string name="nobody_registered_yet">Hali birorta doktor ro’yxatdan o’tmagan</string>
    <string name="create_account_offer">Ro’yxatdan o’tishni istaysizmi?</string>
    <string name="yes">Ha</string>
    <string name="no">Yo’q</string>
    <string name="choose_speciality">Mutaxassisligingizni tanlang</string>
    <string name="specialities_list">Bo’limlar ro’yxati</string>
    <string name="symptoms_list">Simptomlar ro’yxati</string>
    <string name="empty_specialities">Hech qanday mutaxassislik mavjud emas</string>
    <string name="empty_symptoms">Hech qanday simptomlar mavjud emas</string>
    <string name="json1">{"id": 1,"diseaseName": "Yurak huruji","specialityId": 0,"description": "Yurak hurujining belgilari turlicha bo'ladi. Ba'zi odamlarda yengil alomatlar mavjud bo'lsa, boshqalarida jiddiy alomatlar kuzatiladi. Ba'zi odamlarda esa alomatlar kuzatilmaydi. Ba'zida yurak hurujlari to'satdan paydo bo'ladi. Ammo, ko'p odamlarda bir necha soat, kunlar yoki haftalar oldin ogohlantirish belgilari va alomatlari seziladi. Ko'krak qafasidagi og'riq yoki bosim (stenokardiya) davom etaveradi va dam olish bilan ham yo'qolmaydi, bu ilk ogohlantirish belgisi bo'lishi mumkin. Angina yurakka qon oqimining vaqtincha pasayishi tufayli yuzaga keladi.","symptomList": [{"id": 1,"symptomName": "Sovuq ter chiqishi","diseaseId": 1},{"id": 2,"symptomName": "Charchoq","diseaseId": 1},{"id": 3,"symptomName": "Oshqozon og'rishi yoki ovqat hazm qilish buzilishi","diseaseId": 1},{"id": 4,"symptomName": "Bosh aylanishi yoki to'satdan bosh aylanishi","diseaseId": 1},{"id": 5,"symptomName": "Ko'ngil aynishi","diseaseId": 1},{"id": 6,"symptomName": "Nafas siqilishi","diseaseId": 1}]}</string>
    <string name="json2">{"id": 2,"diseaseName": "Insult","specialityId": 0,"description": "Agar siz yoki siz bilan birga bo'lgan odam insultni boshdan kechirayotgan bo'lsa, alomatlar boshlangan vaqtga alohida e'tibor bering. Ba'zida birinchi yordam insult boshlanganidan so'ng darhol qo'llanilganda eng samarali usul bo'ladi.","symptomList": [{"id": 1,"symptomName": "Gapirish va boshqalarning so'zlarini tushunish qiyinlashishi. Chalkashliklarga duch kelish, so'zlarni  yoki nutqni tushunishda qiyinchiliklarga duch kelish mumkin","diseaseId": 2},{"id": 2,"symptomName": "Yuz, qo'l yoki oyoqning falaj yoki uyquchanligi. Yuz, qo'l yoki oyoqda to'satdan uyquchanlik, zaiflik yoki falaj rivojlanishini his qilish mumkin. Bu ko'pincha tananing bir tomoniga ta'sir qiladi. Bir vaqtning o'zida ikkala qo'lni boshga ko'tarishga harakat qilish zarur. Agar bir qo'l tusha boshlasa, insult bo'lishi mumkin. Bundan tashqari, tabassum qilmoqchi bo'lganda og'izning bir tomoni cho'kishi mumkin.","diseaseId": 2},{"id": 3,"symptomName": "Bir yoki ikkala ko'zda ko'rish bilan bog'liq muammolar. To'satdan bir yoki ikkala ko'zda loyqa yoki qoraygan ko'rish yoki ikki marta ko'rish mumkin.","diseaseId": 2},{"id": 4,"symptomName": "Bosh og'rig'i. Qusish, bosh aylanishi yoki anglashni susayishi bilan birga bo'lishi mumkin bo'lgan to'satdan kuchli bosh og'rig'i insultni boshdan kechirishni ko'rsatishi mumkin.","diseaseId": 2},{"id": 5,"symptomName": "Yurish muammosi. Qoqilib ketish yoki muvozanatni yo'qotish mumkin. Bundan tashqari, To'satdan bosh aylanishi yoki muvozanatni yo'qotish mumkin.","diseaseId": 2}]}</string>
    <string name="json3">{"id": 3,"diseaseName": "Yurak yetishmovchiligi","specialityId": 0,"description": "Yurak yetishmovchiligi doimiy (surunkali) bo'lishi  yoki to'satdan (o'tkir) boshlanishi mumkin","symptomList": [{"id": 1,"symptomName": "Harakatda yoki yotganda nafas siqilishi","diseaseId": 3},{"id": 2,"symptomName": "Charchoq va zaiflik","diseaseId": 3},{"id": 3,"symptomName": "Oyoq, to'piq va tovonlarda shishish","diseaseId": 3},{"id": 4,"symptomName": "Tez-tez yoki tartibsiz yurak urishi","diseaseId": 3},{"id": 5,"symptomName": "Jismoniy mashqlar qilish qobiliyatining pasayishi","diseaseId": 3},{"id": 6,"symptomName": "Oq yoki pushti qonli shilimshiqli doimiy yo'tal yoki xirillash","diseaseId": 3},{"id": 7,"symptomName": "Qorin bo'shlig'ining shishishi","diseaseId": 3},{"id": 8,"symptomName": "Suyuqlik to'planishidan juda tez kilogramm ortishi","diseaseId": 3},{"id": 9,"symptomName": "Ko'ngil aynishi va ishtahasizlik","diseaseId": 3},{"id": 10,"symptomName": "Diqqatni jamlashda qiyinchilik yoki hushyorlikning pasayishi","diseaseId": 3},{"id": 11,"symptomName": "Ko'krak og'rig'i , agar yurak yetishmovchiligi yurak hurujidan kelib chiqqan bo'lsa","diseaseId": 3}]}</string>
    <string name="json4">{"id": 4,"diseaseName": "Yurak qopg'og'i kasalligi","specialityId": 0,"description": "Yurak qopqog'i kasalligi bo'lgan ba'zi odamlarda ko'p yillar davomida alomatlar bo'lmasligi mumkin.","symptomList": [{"id": 1,"symptomName": "Shifokor stetoskop bilan yurakni tinglayotganda xirillash ovozi (yurak shovqini)","diseaseId": 4},{"id": 2,"symptomName": "Ko'krakda og'riq","diseaseId": 4},{"id": 3,"symptomName": "Qorin bo'shlig'ining shishishi","diseaseId": 4},{"id": 4,"symptomName": "Charchoq""diseaseId": 4},{"id": 5,"symptomName": "Nafas qisilishi, harakatda yoki yotganda","diseaseId": 4},{"id": 6,"symptomName": "To'piqlar va oyoqlarning shishishi","diseaseId": 4},{"id": 7,"symptomName": "Bosh aylanishi","diseaseId": 4},{"id": 8,"symptomName": "Hushdan ketish","diseaseId": 4},{"id": 9,"symptomName": "Noto'g'ri yurak urishi","diseaseId": 4}]}</string>
    <string name="json5">{"id": 5,"diseaseName": "Yurak aritmiyasi","specialityId": 0,"description": "Yurak aritmiyalari hech qanday alomat yoki belgilarga olib kelmasligi mumkin. Shifokor sog'lig'ingizni boshqa sabablarga ko'ra tekshirganda yurak urishining buzilishini sezishi mumkin.","symptomList": [{"id": 1,"symptomName": "Ko'krak qafasidagi titroq","diseaseId": 5},{"id": 2,"symptomName": "Yurak urishining tezlashishi (taxikardiya)","diseaseId": 5},{"id": 3,"symptomName": "Yurak urishining sekinlashishi (bradikardiya)","diseaseId": 5},{"id": 4,"symptomName": "Ko'krakda og'riq","diseaseId": 5},{"id": 5,"symptomName": "Nafas qisilishi","diseaseId": 5},{"id": 6,"symptomName": "Bezovtalik","diseaseId": 5},{"id": 7,"symptomName": "Charchoq","diseaseId": 5},{"id": 8,"symptomName": "Yengillik yoki bosh aylanishi","diseaseId": 5},{"id": 9,"symptomName": "Terlash","diseaseId": 5},{"id": 10,"symptomName": "Hushidan ketish (senkop) yoki hushidan ketishga yaqin holat","diseaseId": 5}]}</string>

</resources>