<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.sign_up.SignUpFragment">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/app_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_data"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/img"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/img" />

    <EditText
        android:id="@+id/first_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/correct_edit_text_background"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/correct_edit_text_background"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="@id/first_name_et"
        app:layout_constraintRight_toRightOf="@id/first_name_et"
        app:layout_constraintTop_toBottomOf="@id/first_name_et" />

    <EditText
        android:id="@+id/phone_number_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/correct_edit_text_background"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="@id/first_name_et"
        app:layout_constraintRight_toRightOf="@id/first_name_et"
        app:layout_constraintTop_toBottomOf="@id/last_name_et" />

    <EditText
        android:id="@+id/speciality_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/correct_edit_text_background"
        android:editable="false"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="@id/first_name_et"
        app:layout_constraintRight_toRightOf="@id/first_name_et"
        app:layout_constraintTop_toBottomOf="@id/phone_number_et" />

    <EditText
        android:id="@+id/room_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/correct_edit_text_background"
        android:hint="@string/room"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="@id/first_name_et"
        app:layout_constraintRight_toRightOf="@id/first_name_et"
        app:layout_constraintTop_toBottomOf="@id/speciality_et" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/correct_edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="@id/first_name_et"
        app:layout_constraintRight_toRightOf="@id/first_name_et"
        app:layout_constraintTop_toBottomOf="@id/room_et" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:background="@drawable/enabled_button_background"
        android:orientation="horizontal"
        android:text="@string/send_verification_code"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/first_name_et"
        app:layout_constraintRight_toRightOf="@id/first_name_et"
        app:layout_constraintTop_toBottomOf="@id/password_et" />

</androidx.constraintlayout.widget.ConstraintLayout>