<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nobody_registered_yet"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account_offer"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yes_btn"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/enabled_button_background"
            android:backgroundTint="@color/green"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/no_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/enabled_button_background"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/yes_btn"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintRight_toLeftOf="@id/yes_btn"
            app:layout_constraintTop_toTopOf="@id/yes_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>