<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/verification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/code_sent_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Salom"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/verification_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/correct_edit_text_background"
                android:hint="@string/verification_code"
                android:inputType="numberDecimal"
                android:padding="@dimen/_7sdp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/code_sent_tv" />

            <TextView
                android:id="@+id/warning_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/verification_code_must_be_6_digits"
                android:textColor="@color/red"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@id/verification_code_et"
                app:layout_constraintTop_toBottomOf="@id/verification_code_et" />

            <TextView
                android:id="@+id/timer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="01:00"
                app:layout_constraintRight_toRightOf="@id/verification_code_et"
                app:layout_constraintTop_toBottomOf="@id/verification_code_et" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/confirm_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/enabled_button_background"
                android:orientation="horizontal"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timer_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/change_phone_number_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/enabled_button_background"
                android:backgroundTint="@color/green"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="@string/change_phone_number"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintRight_toLeftOf="@id/confirm_btn"
                app:layout_constraintTop_toTopOf="@id/confirm_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/correct_edit_text_background"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="@dimen/_7sdp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ok_btn"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/enabled_button_background"
                android:backgroundTint="@color/green"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="Ok"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintRight_toRightOf="@id/phone_number_et"
                app:layout_constraintTop_toBottomOf="@id/phone_number_et" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/enabled_button_background"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:text="Cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintRight_toLeftOf="@id/ok_btn"
                app:layout_constraintTop_toTopOf="@id/ok_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/red"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/refresh_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/refresh_image"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/progressbar"
            app:layout_constraintLeft_toLeftOf="@id/progressbar"
            app:layout_constraintRight_toRightOf="@id/progressbar"
            app:layout_constraintTop_toTopOf="@id/progressbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>